fix resizefs for no partition rootfs

--- a/playbooks/adhoc.yaml
+++ b/playbooks/adhoc.yaml
@@ -3,6 +3,8 @@
   gather_facts: false
   roles:
     - alpine
+  collections:
+  - wenerme.alpine
   tasks:
   - add_host:
       name: "{{host | default('alpine_host')}}"
