--- a/roles/alpine/tasks/k3s-fetch-kubeconfig.yaml
+++ b/roles/alpine/tasks/k3s-fetch-kubeconfig.yaml
@@ -2,5 +2,5 @@
   become: true
   ansible.builtin.fetch:
     src: /etc/rancher/k3s/k3s.yaml
-    dest: files/kubeconfig-{{inventory_hostname}}.yaml
+    dest: "{{inv_name|default('.')}}/files/kubeconfig-{{inventory_hostname}}.yaml"
     flat: true
