--- a/roles/alpine/tasks/root-password.yaml
+++ b/roles/alpine/tasks/root-password.yaml
@@ -1,3 +1,10 @@
+- name: root passwd | from Values
+  set_fact:
+    root_password_plain: "{{Values.root_password_plain}}"
+  when:
+  - root_password_plain is undefined
+  - Values is defined
+  - Values.root_password_plain is defined
 - name: update root password
   become: true
   user:
