--- a/roles/alpine/tasks/haproxy-conf.yaml
+++ b/roles/alpine/tasks/haproxy-conf.yaml
@@ -6,3 +6,16 @@
     mode: preserve
   when: haproxy_conf_inline is defined
   notify: haproxy-reload
+
+- name: haproxy | host haproxy.cfg
+  become: true
+  copy:
+    dest: /etc/haproxy/haproxy.cfg
+    src: '{{haproxy_cfg_file}}'
+    mode: preserve
+  vars:
+    haproxy_cfg_file: "{{inv_name}}/files/{{inventory_hostname}}/haproxy.cfg"
+  when:
+  - inv_name is defined
+  - "haproxy_cfg_file is file"
+  notify: haproxy-reload
