--- a/galaxy.yml
+++ b/galaxy.yml
@@ -9,7 +9,7 @@ namespace: wenerme
 name: alpine
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 1.0.5
+version: 1.0.6
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
@@ -67,3 +67,5 @@ build_ignore:
   - .DS_Store
   - ignored.md
   - ignored
+  - '*.tar.gz'
+  - '.idea'
