--- a/roles/alpine/tasks/dnsmasq-service.yaml
+++ b/roles/alpine/tasks/dnsmasq-service.yaml
@@ -1,27 +1,22 @@
-- name: install dnsmasq
+- name: dnsmasq | install
   become: true
   apk:
     name: dnsmasq
   when: dnsmasq_dnssec is undefined
 
 # dnsmasq with dnssec support - conflict with dnsmasq
-- name: install dnsmasq-dnssec (optional)
+- name: dnsmasq | install dnsmasq-dnssec (optional)
   become: true
   apk:
     name: dnsmasq-dnssec
   when: dnsmasq_dnssec is defined
 
-- name: sync dnsmasq conf
-  include_tasks: dnsmasq-conf-sync.yaml
+- name: dnsmasq | conf
+  include_tasks: dnsmasq-conf.yaml
 
-- name: start dnsmasq service
+- name: dnsmasq | start service
   become: true
   service:
     name: dnsmasq
     state: started
-
-- name: enable dnsmasq service
-  become: true
-  service:
-    name: dnsmasq
     enabled: true
