--- a/roles/alpine/tasks/docker-service.yaml
+++ b/roles/alpine/tasks/docker-service.yaml
@@ -1,6 +1,6 @@
 - import_tasks: docker-install.yaml
 
-- import_tasks: docker-conf.yaml
+- import_tasks: docker-daemon-conf.yaml
 
 - name: start docker on bootstrap
   become: true
