--- a/roles/alpine/tasks/setup-base.yaml
+++ b/roles/alpine/tasks/setup-base.yaml
@@ -1,4 +1,4 @@
-- include_tasks: ensure-python.yaml
+- import_tasks: ensure-python.yaml
 
 # system
 # --------------------
@@ -15,6 +15,7 @@
     - shadow
     - bash
     - sudo
+    - doas
     - busybox-extras
     # scp
     - openssh-client
