--- a/roles/alpine/tasks/zfs-service.yaml
+++ b/roles/alpine/tasks/zfs-service.yaml
@@ -1,24 +1,28 @@
-- name: ensure udev
+- name: zfs-service | ensure udev
   include_tasks: ensure-service.yaml
   vars:
     - service_name: udev
 
-- name: "install zfs with kernal {{ ansible_kernel }}"
+- setup:
+  when: ansible_kernel is undefined
+  name: zfs-service | gather
+
+- name: zfs-service | install zfs with kernal {{ ansible_kernel }}
   become: true
   apk:
     name: "{{ item }}"
   loop:
     - zfs
     - zfs-udev
-    - "zfs-{{ ansible_kernel | regex_search('-([a-z]*?)$','\\1') | first | default('vanilla') }}"
+    - "zfs-{{ ansible_kernel | regex_search('-([a-z]*?)$','\\1') | first | default('lts') }}"
 
-- name: load zfs module
+- name: zfs-service | load zfs module
   become: true
   modprobe:
     name: zfs
     state: present
 
-- name: persist zfs mpdule
+- name: zfs-service | persist zfs mpdule
   become: true
   lineinfile:
     path: /etc/modules-load.d/zfs.conf
@@ -26,7 +30,7 @@
     create: true
     mode: 0644
 
-- name: start zfs
+- name: zfs-service | start zfs
   become: true
   service:
     name: "{{ item }}"
@@ -37,7 +41,7 @@
   tags:
     - service-start
 
-- name: enable zfs on boot
+- name: zfs-service | enable zfs on boot
   become: true
   service:
     name: "{{ item }}"
