--- a/roles/alpine/tasks/k3s-prepare.yaml
+++ b/roles/alpine/tasks/k3s-prepare.yaml
@@ -11,17 +11,17 @@
       become: true
       lineinfile:
         path: /etc/update-extlinux.conf
-        backrefs: yes
+        backrefs: true
         regexp: '^default_kernel_opts="[^"]*cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory[^"]*"'
         state: absent
-      check_mode: yes
+      check_mode: true
       register: lineinfile
       changed_when: false
     - name: extlinux | add cgroup kernel params
       become: true
       lineinfile:
         path: /etc/update-extlinux.conf
-        backrefs: yes
+        backrefs: true
         regexp: '^default_kernel_opts="([^""]*)"'
         line: 'default_kernel_opts="\1 cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory"'
       when: lineinfile.found is defined and not lineinfile.found
@@ -39,17 +39,17 @@
       become: true
       lineinfile:
         path: /etc/default/grub
-        backrefs: yes
+        backrefs: true
         regexp: '^GRUB_CMDLINE_LINUX_DEFAULT="[^"]*cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory[^"]*"'
         state: absent
-      check_mode: yes
+      check_mode: true
       register: lineinfile
       changed_when: false
     - name: grub | add cgroup kernel params
       become: true
       lineinfile:
         path: /etc/default/grub
-        backrefs: yes
+        backrefs: true
         regexp: '^GRUB_CMDLINE_LINUX_DEFAULT="([^""]*)"'
         line: 'GRUB_CMDLINE_LINUX_DEFAULT="\1 cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory"'
       when: lineinfile.found is defined and not lineinfile.found
