--- a/roles/alpine/tasks/k3s-service.yaml
+++ b/roles/alpine/tasks/k3s-service.yaml
@@ -25,7 +25,7 @@
       uri:
         url: "https://127.0.0.1:6443/ping"
         validate_certs: false
-        return_content: yes
+        return_content: true
       register: result
       # until: result.msg == "pong"
       until: result.status == 200
@@ -44,7 +44,7 @@
   uri:
     url: "{{ k3s_server_url }}/ping"
     validate_certs: false
-    return_content: yes
+    return_content: true
   register: result
   # until: result.msg == "pong"
   until: result.status == 200
