--- a/playbooks/inv-keygen.yaml
+++ b/playbooks/inv-keygen.yaml
@@ -5,8 +5,9 @@
     file:
       path: "{{inv_name}}/credentials"
       state: directory
+      mode: 0600
   # ssh-keygen -t rsa -b 2048 -f ${inv_name}/credentials/admin_rsa -C "$inv_name-admin" -q -N ""
-  - openssh_keypair:
+  - community.crypto.openssh_keypair:
       path: "{{inv_name}}/credentials/admin_rsa"
       size: 2048
       comment: Administrator
