--- a/playbooks/inv-ssh-copy-id.yaml
+++ b/playbooks/inv-ssh-copy-id.yaml
@@ -6,7 +6,7 @@
     when: remote_user is undefined
   - name: Set authorized key taken from file
     become: "{{remote_user != ansible_user}}"
-    authorized_key:
+    community.crypto.authorized_key:
       user: "{{remote_user}}"
       state: present
       key: "{{ lookup('file', inv_name+'/credentials/admin_rsa.pub') }}"
