--- a/roles/alpine/tasks/tinc-install.yaml
+++ b/roles/alpine/tasks/tinc-install.yaml
@@ -1,8 +1,3 @@
-- name: tinc | install tinc-pre
-  become: true
-  apk:
-    name: tinc-pre
-
 - name: tinc | load modules
   become: true
   modprobe:
@@ -17,5 +12,12 @@
     path: /etc/modules-load.d/tinc.conf
     line: "{{ item }}"
     create: true
-    mode: 0644
   loop: *modules
+
+- name: tinc | install
+  become: true
+  package:
+    name: "{{ item }}"
+    state: present
+  loop:
+    - tinc-pre
