--- a/roles/alpine/handlers/main.yaml
+++ b/roles/alpine/handlers/main.yaml
@@ -148,3 +148,10 @@
 - name: k3s-restart
   become: true
   command: service k3s --ifstarted restart
+
+- name: frpc.restart
+  service:
+    name: frpc
+    state: restarted
+    enabled: true
+  become: true
